Messing with JS and making my team load

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title></title>
   </head>
   <body>
+    <nav>
+      
+    </nav>
 
     <script src="main.js" charset="utf-8"></script>
     <script src="pokeapi.js" charset="utf-8"></script>
