final commit of the day, got the sprites to work better

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <title></title>
   </head>
   <body>
-    <nav>
-      
-    </nav>
+    <nav id='topbar'>
 
+        <input class='corner' type="search" name="pksearch" placeholder="Search Pkmn">
+        <input class='corner' type="button" value="🔍">
+    </nav>
+    <section id="teamSlider">
+      <div class="pSlider"></div>
+      <div class="pSlider"></div>
+      <div class="pSlider"></div>
+      <div class="pSlider"></div>
+      <div class="pSlider"></div>
+      <div class="pSlider"></div>
+    </section>
     <script src="main.js" charset="utf-8"></script>
-    <script src="pokeapi.js" charset="utf-8"></script>
   </body>
 </html>
