getting the images on screen and re-css'ing the F**k outta the bars of the left

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <input class='corner' type="button" value="🔍">
     </nav>
     <section id="teamSlider">
-      <div class="pSlider"></div>
-      <div class="pSlider"></div>
-      <div class="pSlider"></div>
-      <div class="pSlider"></div>
-      <div class="pSlider"></div>
-      <div class="pSlider"></div>
+      <div class="pSlider"><img class="pkmnIcon" src='https://img.pokemondb.net/sprites/sun-moon/icon/mimikyu.png'></div>
+      <div class="pSlider"><img class="pkmnIcon"></div>
+      <div class="pSlider"><img class="pkmnIcon"></div>
+      <div class="pSlider"><img class="pkmnIcon"></div>
+      <div class="pSlider"><img class="pkmnIcon"></div>
+      <div class="pSlider"><img class="pkmnIcon"></div>
     </section>
     <script src="main.js" charset="utf-8"></script>
   </body>
