implementing Sass and "finalizing designs" for the boxes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="output.css">
     <title></title>
   </head>
   <body>
@@ -12,12 +13,17 @@
         <input class='corner' type="button" value="🔍">
     </nav>
     <section id="teamSlider">
-      <div class="pSlider"><img class="pkmnIcon" src='https://img.pokemondb.net/sprites/sun-moon/icon/mimikyu.png'></div>
-      <div class="pSlider"><img class="pkmnIcon"></div>
-      <div class="pSlider"><img class="pkmnIcon"></div>
-      <div class="pSlider"><img class="pkmnIcon"></div>
-      <div class="pSlider"><img class="pkmnIcon"></div>
-      <div class="pSlider"><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'>Mimikyu</p><img class="pkmnIcon" src='https://img.pokemondb.net/sprites/sun-moon/icon/mimikyu.png'></div>
+      <div class="pSlider"><p class='pkmnText'>Jirachi</p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'>Aggron</p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
+    </section>
+    <section id='trainerGrid'>
+      <div class="">
+
+      </div>
     </section>
     <script src="main.js" charset="utf-8"></script>
   </body>
