--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <input class='corner' type="button" value="🔍">
     </nav>
     <section id="teamSlider">
-      <div class="pSlider"><p class='pkmnText'>Mimikyu</p><img class="pkmnIcon" src='https://img.pokemondb.net/sprites/sun-moon/icon/mimikyu.png'></div>
-      <div class="pSlider"><p class='pkmnText'>Jirachi</p><img class="pkmnIcon"></div>
-      <div class="pSlider"><p class='pkmnText'>Aggron</p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
+      <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
