commit of the day

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <title></title>
   </head>
   <body>
@@ -20,7 +21,8 @@
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
     </section>
-    <section id='trainerGrid'>
+    <section id='trainerCard'>
+      <img class='pkmnFullImage'>
       <div class="">
 
       </div>
