got the abilities instead of the types

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="output.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <title></title>
   </head>
   <body>
@@ -13,6 +12,7 @@
         <input class='corner' type="search" name="pksearch" placeholder="Search Pkmn">
         <input class='corner' type="button" value="🔍">
     </nav>
+    
     <section id="teamSlider">
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
@@ -21,12 +21,10 @@
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
       <div class="pSlider"><p class='pkmnText'></p><img class="pkmnIcon"></div>
     </section>
-    <section id='trainerCard'>
+    <section id='trainerCard' class='container'>
       <img class='pkmnFullImage'>
-      <div class="">
-
-      </div>
     </section>
+
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
