CSS'ing the F*ck outta the stuff

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="pSlider" onclick="check(0)"><p class='pkmnText'></p><img class="pkmnIcon"></div>
         <div class="pSlider" onclick="check(1)"><p class='pkmnText'></p><img class="pkmnIcon"></div>
         <div class="pSlider" onclick="check(2)"><p class='pkmnText'></p><img class="pkmnIcon"></div>
-        <div class="pSlider" onclick='check(3)'><p class='pkmnText'></p><img class="pkmnIcon"></div>
-        <div class="pSlider" onclick='check(4)'><p class='pkmnText'></p><img class="pkmnIcon"></div>
-        <div class="pSlider" onclick='check(5)'><p class='pkmnText'></p><img class="pkmnIcon"></div>
+        <div class="pSlider" onclick='check(3)'><p class='pkmnText'>Add A Pokemon</p><img class="pkmnIcon"></div>
+        <div class="pSlider" onclick='check(4)'><p class='pkmnText'>Add A Pokemon</p><img class="pkmnIcon"></div>
+        <div class="pSlider" onclick='check(5)'><p class='pkmnText'>Add A Pokemon</p><img class="pkmnIcon"></div>
       </section>
       <section id='showCard'>
-        <img id='pkmnFullImage'>
+        <img id='pkmnFullImage' src="https://maxcdn.icons8.com/app/uploads/2015/06/pokeball1-1.png">
         <section id='statsCard'>
           <p class='stat' id='name'></p>
           <p class='stat' id='hp'></p>
@@ -33,7 +33,7 @@
           <p class='stat' id='spd'></p>
         </section>
         <p id='abilities'>Ability/Abilities:</p>
-        <p class='ability' id='abilities'></p>
+        <p class='ability' id='abilities'>Click Any Pokemon to View</p>
       </section>
   </div>
 
