making the title actually say something

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="output.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
-    <title></title>
+    <title>Jason's Party</title>
   </head>
   <body>
     <nav id='topbar'>
